syntax = "proto3";

package tesseral.common.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message AccessTokenData {
  string iss = 1;
  string sub = 2;
  string aud = 3;
  double exp = 4;
  double nbf = 5;
  double iat = 6;

  AccessTokenSession session = 8;
  AccessTokenUser user = 9;
  AccessTokenOrganization organization = 10;
  repeated string actions = 12;
  AccessTokenImpersonator impersonator = 11;
}

message AccessTokenSession {
  string id = 1;
}

message AccessTokenUser {
  string id = 1;
  string email = 2;
  string display_name = 3;
  string profile_picture_url = 4;
}

message AccessTokenOrganization {
  string id = 1;
  string display_name = 2;
}

message AccessTokenImpersonator {
  string email = 1;
}

message ErrorDetail {
  string description = 1;
  string docs_link = 2;
}

// Audit log events may be generated by Tesseral or projects and are distributed to
// endpoints configured at the organization level.
message AuditLogEvent {
  // The unique ID of the event.
  string id = 1;

  // The ID of the organization associated with the event.
  string organization_id = 2;

  // The ID of the user associated with the event, if any.
  optional string user_id = 3;

  // The ID of the session associated with the event, if any.
  optional string session_id = 4;

  // The ID of the API Key associated with the event, if any.
  optional string api_key_id = 5;

  // The time the event occurred.
  //
  // This can optionally be provided on input when the event occurred at some point in the past.
  // Otherwise, this will be returned on output and defaults to the time the event is published.
  google.protobuf.Timestamp event_time = 6;

  // The name of the event.
  string event_name = 7;

  // The event payload JSON.
  google.protobuf.Struct event_details = 8;
}
